prevent pizza.de popup from hiding behind hipsterTopBar

--- a/app/assets/stylesheets/inject_pizzade.scss
+++ b/app/assets/stylesheets/inject_pizzade.scss
@@ -11,6 +11,9 @@ body {
   padding-top: 57px;
 }
 
+.jqmWindow {
+  top: 57px !important;
+}
 
 #hipsterTopBar {
   position: fixed;
